@@ -90,12 +90,12 @@ switch (get_request_var_request("action")) {
 
 		break;
 	case 'ajax_view':
-		graph();
+		cacti_graph();
 
 		break;
 	default:
 		include_once(CACTI_BASE_PATH . "/include/top_header.php");
-		graph();
+		cacti_graph();
 		include_once(CACTI_BASE_PATH . "/include/bottom_footer.php");
 
 		break;
